--- a/src/track_target/package.xml
+++ b/src/track_target/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>image_segmentation</name>
+  <name>track_target</name>
   <version>0.0.0</version>
-  <description>The image_segmentation package</description>
+  <description>The track_target package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/image_segmentation</url> -->
+  <!-- <url type="website">http://wiki.ros.org/track_target</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -50,23 +50,14 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>ros_numpy</build_depend>
-  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>ros_numpy</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>ros_numpy</exec_depend>
-  <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
